# robota-scraper-bot

./: .gitignore  .pre-commit-config.yaml  README.md  main.py  pyproject.toml  robota_test.html  vacancies.db
app/: database.py
app/bot/: handlers.py
app/core/: config.py  scheduler.py
app/parser/: client.py  extractor.py  models.py  scraper.py
tests/: conftest.py  test_core.py
tests/parser/: test_client.py  test_extractor.py  test_scraper.py
